fix problem with overflow. Move covering layer for platforms to tablet and desktop styles.

--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -26,6 +26,7 @@
     margin-bottom: $space-8;
     padding: $space-4 $space-4 $space-4 $space-32;
     border: 2px solid $blue-900;
+    outline: none;
     background: $blue-900;
     color: $white;
   }
